# agent-ui

./: .env  .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  start.sh
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  db.py  main.py  schemas.py
backend/app/services/: agent.py  openai.py  store.py  tools.py
backend/data/: app.db
backend/local_assistant_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/nexora_agent_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: Dockerfile  index.html  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/components/: chat-sidebar.tsx  composer.tsx  markdown.tsx  message-bubble.tsx
frontend/src/components/ui/: button.tsx  input.tsx  textarea.tsx
frontend/src/lib/: api.ts  types.ts  utils.ts
