[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexora-agent-backend"
version = "0.1.0"
description = "FastAPI backend for Nexora Agent"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "langgraph>=1.0.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "uvicorn>=0.31.0"
]

[tool.setuptools.packages.find]
include = ["app*"]
